# PyFlexAD

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build_instructions_hatch.md  contributors.txt  development_instructions.md  pyproject.toml
.github/workflows/: python-package-uv.yml
notebooks/: notebook_mixed_use_case.ipynb
scripts/bess/: script_bess_aggregation.py  script_bess_benchmark.py  script_bess_optimization.py  script_bess_plot_network_nodes.py  script_pub_use_case.py
scripts/ev/: script_ev_benchmark.py  script_ev_optimization.py
scripts/mixed/: script_benchmark_mixed_use_case.py  script_mixed_penetrations.py  script_mixed_print_model_tables.py  script_mixed_use_case.py
scripts/publication/: script_pub_benchmark_mixed_use_case.py  script_pub_benchmark_mixed_use_case_cost_opt.py  script_pub_fig_correction_algorithms.py  script_pub_fig_extreme_actions.py  script_pub_fig_use_case.py  script_pub_mixed_use_case.py  script_pub_plot_benchmark_mixed_use_case.py  script_pub_plot_benchmark_mixed_use_case_cost_opt.py
src/pyflexad/: __init__.py  py.typed
src/pyflexad/math/: iabvg.py  iabvg_jit.py  lpvg.py  lpvg_gurobipy.py  lpvg_pyomo.py  polytope.py  signal_vectors.py
src/pyflexad/models/bess/: __init__.py  generac.py  tesla.py
src/pyflexad/models/ev/: __init__.py  nissan.py  renault.py  tesla.py
src/pyflexad/models/tclc/: __init__.py  generic.py
src/pyflexad/models/tclh/: __init__.py  generic.py
src/pyflexad/optimization/: _solvers.py  centralized_controller.py  centralized_cost_controller.py  centralized_cost_controller_pyomo.py  centralized_power_controller.py  centralized_power_controller_pyomo.py  vertex_based_controller.py  vertex_based_cost_controller.py  vertex_based_power_controller.py
src/pyflexad/parameters/: general_parameters.py  hardware_parameters.py  usage_parameters.py
src/pyflexad/physical/: electric_vehicle.py  energy_storage.py  pumped_hydro_energy_storage.py  stationary_battery.py  therm_load_cooling.py  therm_load_heating.py
src/pyflexad/system/: energy_prices.py  ev_data.py  household_data.py
src/pyflexad/utils/: algorithms.py  benchmark.py  file_utils.py  network_graph.py  progress_bar.py  testing.py  timer.py  upr.py
src/pyflexad/virtual/: aggregator.py  virtual_energy_storage.py
tests/test_pyflexad/test_aggregation/: test_aggregator.py
tests/test_pyflexad/test_flexibilities/: test_electric_vehicle.py  test_pumped_hydro_energy_storage.py  test_stationary_battery.py  test_therm_load_cooling.py  test_therm_load_heating.py
tests/test_pyflexad/test_optimization/: test_cost_reduction.py  test_peak_shaving.py
tests/test_pyflexad/test_utils/: test_benchmark.py
tests/test_scripts/: test_scripts_bess.py  test_scripts_ev.py  test_scripts_mixed.py  test_scripts_tclc.py  test_scripts_tclh.py
